cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploy East AI Workshop Environment.
Parameters:
  AppServerVPC:
    Description: Select a VPC for deployment.
    Type: AWS::EC2::VPC::Id
  AppServerSubnet:
    Description: Select a subnet for deployment.
    Type: AWS::EC2::Subnet::Id
  BedrockKnowledgebaseId:
    Description: Bedrock Knowledge base Id(Optional)
    Type: String
  GoogleSearchId:
    Description: CSE Id(Optional)
    Type: String
  GoogleSearchAPIKey:
    Description: Google Search API Key(Optional)
    Type: String

Mappings:
  AWSRegionArch2AMI:
    us-east-1:
      HVM64: ami-051f7e7f6c2f40dc1
    us-east-2:
      HVM64: ami-0cf0e376c672104d6
    us-west-2:
      HVM64: ami-002829755fa238bfa
    ap-northeast-1:
      HVM64: ami-0310b105770df9334
    ap-southeast-1:
      HVM64: ami-0464f90f5928bccb8

Resources:
  AppServerRole: 
    Type: "AWS::IAM::Role"
    Properties: 
      AssumeRolePolicyDocument: 
        Version: "2012-10-17"
        Statement: 
          - Effect: "Allow"
            Principal: 
              Service: 
                - "ec2.amazonaws.com"
            Action: 
              - "sts:AssumeRole"
      ManagedPolicyArns: 
        - "arn:aws:iam::aws:policy/AdministratorAccess"
  
  AppServerInstanceProfile: 
    Type: "AWS::IAM::InstanceProfile"
    Properties: 
      Path: "/"
      Roles: 
        - Ref: "AppServerRole"

  AppServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable access to Workshop App Server
      VpcId: !Ref AppServerVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          CidrIp: "0.0.0.0/0"
          FromPort: "80"
          ToPort: "80"
          Description: Allow HTTP Traffic
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
          Description: Allow SSH Traffic


  AppServerENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: ENI
      SubnetId: !Ref AppServerSubnet
      GroupSet:
        - !Ref AppServerSecurityGroup

  AppServer:
    DependsOn:
      - AppServerRole
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: "t3.large"
      ImageId: !FindInMap [ AWSRegionArch2AMI, !Ref 'AWS::Region', HVM64]
      IamInstanceProfile: !Ref AppServerInstanceProfile
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          Description: ENI
          DeviceIndex: 0
          SubnetId: !Ref AppServerSubnet
          GroupSet:
            - !Ref AppServerSecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp3
            VolumeSize: 50
      Tags:
        - Key: Name
          Value: GenAI Workshop Server
      UserData:
        Fn::Base64: !Sub
          - |
            #!/bin/bash
            yum install nginx git jq -y
            wget https://bootstrap.pypa.io/get-pip.py
            python3 get-pip.py
            mkdir /root/east-ai-deploy/
            cd /root/east-ai-deploy/
            git clone -b luna-test https://github.com/DGSA-workshop/east-ai-deploy.git
            yes | rm -rf /usr/share/nginx/html/*
            yes | cp -rf east-ai-deploy/dist/east-ai-ui/* /usr/share/nginx/html/
            yes | cp -rf east-ai-deploy/templates/nginx.conf /etc/nginx/nginx.conf
            systemctl start nginx
            systemctl enable nginx
            cd east-ai-deploy/dist/east-ai-backend/
            python3 -m venv .
            source bin/activate
            TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"`
            aws configure set region `curl -H "X-aws-ec2-metadata-token: $TOKEN" -s  http://169.254.169.254/latest/dynamic/instance-identity/document | jq -r .region`
            ACCOUNTID=`curl -H "X-aws-ec2-metadata-token: $TOKEN" -s  http://169.254.169.254/latest/dynamic/instance-identity/document | jq -r .accountId`
            aws s3 mb s3://east-ai-workshop-$ACCOUNTID
            export WORKSHOP_IMAGE_BUCKET=east-ai-workshop-$ACCOUNTID
            export KNOWLEDGE_BASE_ID=${kb_id}
            export GOOGLE_CSE_CX=${cse_id}
            export GOOGLE_API_KEY=${goog_key}
            pip3 install -q -r requirements.txt
            pip3 install gunicorn
            gunicorn -k uvicorn.workers.UvicornWorker app:app -w 5 --log-file error.log --access-logfile access.log &
            cd ../../templates/
            chmod +x postinstall.sh
            ./postinstall.sh $ACCOUNTID
          - kb_id: !Ref BedrockKnowledgebaseId
            cse_id: !Ref GoogleSearchId
            goog_key: !Ref GoogleSearchAPIKey

Outputs:
  AppServerIPAddress:
    Description: Public IP of App Server
    Value: !GetAtt AppServer.PublicIp
